# cr

./: .editorconfig  .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  azure-pipelines.yml  cr.spec  pyproject.toml  requirements-dev.txt  requirements-pipeline.txt  setup.cfg  setup.py
cr/: __init__.py  api.py  cli.py  config.py  rich_utils.py  ssh.py  utils.py
cr/templates/: settings-mysql.py.txt  settings-postgres.py.txt  settings-sqlite.py.txt  settings-top.py.txt  settings-wagtail.py.txt  settings.py.txt
tests/: test_api.py  test_cli.py  test_config.py  test_utils.py
