[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "CodeRed LLC", email = "info@coderedcorp.com"}
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "certifi",
    "paramiko==2.11.*",
    "rich==12.6.*",
]
description = "The official CodeRed Cloud command line tool."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "cr"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
cr = "cr.cli:main"

[project.urls]
Homepage = "https://www.codered.cloud/cli/"
Source = "https://github.com/coderedcorp/cr"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
)/
'''

[tool.coverage.run]
source = ["cr"]
omit = [
    ".*",
    "venv/*",
]

[tool.pytest.ini_options]
addopts = "--cov cr --cov-report html"

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
packages = ["cr", "cr.templates"]

[tool.setuptools.package-data]
"cr.templates" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "cr.VERSION"}
