[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "CodeRed LLC", email = "info@coderedcorp.com"}
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "certifi",
    "paramiko==3.4.*",
    "rich==13.7.*",
]
description = "The official CodeRed Cloud command line tool."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "cr"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
cr = "cr.cli:main"

[project.urls]
Homepage = "https://www.codered.cloud/cli/"
Source = "https://github.com/coderedcorp/cr"

[tool.coverage.run]
source = ["cr"]
omit = [
    ".*",
    "venv/*",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov cr --cov-report html"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2

[tool.setuptools]
packages = ["cr", "cr.templates"]

[tool.setuptools.package-data]
"cr.templates" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "cr.VERSION"}
